@@ -1,3 +1,12 @@
+2006-01-25  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/test/common.py (Base.get_object): New function, to avoid
+	accessing private members from subclasses.
+
+	* kiwi/ui/test/player.py (Player.delete_window): delete the
+	reference to the window, so it can be destroyed properly and
+	new windows can be put here, eg when we reopen the dialog.
+
 2006-01-24  Henrique Romano  <henrique@async.com.br>
 
 	* kiwi/ui/widgets/label.py (Label.set_underline): 
